Add login page to collect CF user credentials

--- a/github-deployer/pom.xml
+++ b/github-deployer/pom.xml
@@ -92,6 +92,9 @@
 			<plugin>
 				<groupId>pl.project13.maven</groupId>
 				<artifactId>git-commit-id-plugin</artifactId>
+				<configuration>
+					<dotGitDirectory>${basedir}/..</dotGitDirectory>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
