Stop revealing users credentials

--- a/github-admin/src/main/resources/application.properties
+++ b/github-admin/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.cloud.cloudfoundry.discovery.username: dsyer@gopivotal.com
 spring.cloud.cloudfoundry.discovery.password: ${USER_PASSWORD}
 #logging.level.org.springframework.web.client: trace
 #logging.level.org.cloudfoundry: trace
-logging.level.org.springframework.security: debug
+#logging.level.org.springframework.security: debug
