--- a/github-deployer/pom.xml
+++ b/github-deployer/pom.xml
@@ -93,7 +93,7 @@
 				<groupId>pl.project13.maven</groupId>
 				<artifactId>git-commit-id-plugin</artifactId>
 				<configuration>
-					<dotGitDirectory>${basedir}/..</dotGitDirectory>
+					<dotGitDirectory>${basedir}/../.git</dotGitDirectory>
 				</configuration>
 			</plugin>
 		</plugins>
