Test deployer for real

--- a/github-deployer/pom.xml
+++ b/github-deployer/pom.xml
@@ -21,7 +21,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
-		<reactor.version>2.5.0.BUILD-SNAPSHOT</reactor.version>
+		<reactor.version>2.5.0.M3</reactor.version>
 	</properties>
 
 	<dependencies>
@@ -44,6 +44,16 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-cloudfoundry-deployer</artifactId>
+			<version>1.0.0.BUILD-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-deployer-resource-support</artifactId>
+			<version>1.0.0.BUILD-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-deployer-resource-maven</artifactId>
 			<version>1.0.0.BUILD-SNAPSHOT</version>
 		</dependency>
 
