--- a/github-deployer/src/main/resources/application.properties
+++ b/github-deployer/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port: 8082
 security.basic.enabled: false
+management.security.enabled: false
 spring.cloud.cloudfoundry.deployer.organization: FrameworksAndRuntimes
 spring.cloud.cloudfoundry.deployer.apiEndpoint: https://api.run.pivotal.io
 spring.cloud.cloudfoundry.deployer.space: mgrzejszczak
@@ -8,6 +9,9 @@ spring.cloud.cloudfoundry.deployer.password: ${USER_PASSWORD}
 spring.cloud.cloudfoundry.deployer.domain: cfapps.io
 logging.level.org.springframework.web.client: trace
 logging.level.org.cloudfoundry: trace
-application.resources.github-webhook: maven://org.springframework.github:github-webhook:0.0.1-SNAPSHOT
-application.resources.github-analytics: maven://org.springframework.github:github-analytics:0.0.1-SNAPSHOT
+logging.level.cloudfoundry-client: debug
+application.resources.admin: maven://org.springframework.github:github-admin:0.0.1-SNAPSHOT
+application.resources.deployer: maven://org.springframework.github:github-deployer:0.0.1-SNAPSHOT
+application.resources.webhook: maven://org.springframework.github:github-webhook:0.0.1-SNAPSHOT
+application.resources.analytics: maven://org.springframework.github:github-analytics:0.0.1-SNAPSHOT
 
